--- a/mainstyles.css
+++ b/mainstyles.css
@@ -1,9 +1,9 @@
 #logo-image {
-    height: 35px;
+    height: 80px;
 }
 
 #top-menu-area {
-    height: 10%;
+    height: 30%;
     background-color: #55ACEE;
     width:100%;
 }
@@ -28,7 +28,7 @@
 }
 
 #pizza-chart { /*trying to make the pizza responsive*/
-		 align:center;
+	align:center;
   	width: 100%;
   	height: 100%;
 }
@@ -40,8 +40,12 @@
 
 .postcode {
 		display:inline;
-		margin-left: 22%;
+        margin-left: 10%;
 		margin-top:100%;
+}
+
+#distance-units {
+    color: white;
 }
 
 button {
@@ -52,6 +56,7 @@ button {
 }
 
 .glyphicon {
+    /* Visual Studio doesn't like "text-size", is it a real attribute? */
     text-size:10vw;
     width:1%;
     
@@ -62,7 +67,7 @@ button {
 }
 
 .distance {
-		margin-left:20%;
+	margin-left:5px;
   	width:10%;
 }
 
