--- a/mainstyles.css
+++ b/mainstyles.css
@@ -1,13 +1,16 @@
 #logo-image {
-    height: 80px;
+    /*margin: 5px;*/
+    height: 100%;
 }
 
-#top-menu-area {
-    height: 30%;
+#nav-bar {
+    position: relative;
+    height: 50px;
     background-color: #55ACEE;
     width:100%;
 }
 
+/*
 #results-area {
     height: 30%;
     width: 400px;
@@ -26,17 +29,21 @@
 #simpleTable tbody tr td {
     text-align: left;
 }
+*/
 
 #pizza-chart { /*trying to make the pizza responsive*/
-	align:center;
+	  align:center;
   	width: 100%;
   	height: 100%;
 }
+/*
 
 #pizza-chart-container {
 		text-align: center;
 		width:100%;
 }
+
+*/
 
 .postcode {
 		display:inline;
@@ -59,14 +66,14 @@ button {
     /* Visual Studio doesn't like "text-size", is it a real attribute? */
     text-size:10vw;
     width:1%;
-    
+
 }
 
-.search {
+#search {
 		width:30%;
 }
 
-.distance {
+#distance {
 	margin-left:5px;
   	width:10%;
 }
@@ -83,7 +90,7 @@ button {
 	text-align: center;
 	padding: 10px 40px 0 40px;
 	position: relative;
-	margin: 0 10px 0 0; 
+	margin: 0 10px 0 0;
 	text-decoration: none;
 	color: #fff;
 }
@@ -95,8 +102,8 @@ button {
     background: #2d1db9;
 }
 
-ul{ 
-		list-style-type: none; 
+ul{
+		list-style-type: none;
 }
 
 #breadcrumbs-area ul li a:after {
@@ -107,10 +114,9 @@ ul{
 }
 
 #breadcrumbs-area ul li a:before {
-		content: "";  
+		content: "";
 		border-top: 20px solid transparent;
 		border-bottom: 20px solid transparent;
 		border-left: 20px solid white;
 		position: absolute; left: 0; top: 0;
 }
-
