--- a/mainstyles.css
+++ b/mainstyles.css
@@ -10,6 +10,28 @@
     width:100%;
 }
 
+.jumbotron {
+  background-image: url("images/thechip.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+
+.postcode {
+		width: 100%;
+    text-align: center;
+}
+
+.postcode input {
+  width: 100%;
+}
+
+.postcode input,button {
+  display: block;
+  margin-bottom: 5px;
+}
+
+
 /*
 #results-area {
     height: 30%;
@@ -36,6 +58,9 @@
   	width: 100%;
   	height: 100%;
 }
+
+
+
 /*
 
 #pizza-chart-container {
@@ -45,11 +70,6 @@
 
 */
 
-.postcode {
-		display:inline;
-        margin-left: 10%;
-		margin-top:100%;
-}
 
 #distance-units {
     color: white;
@@ -62,6 +82,8 @@ button {
 		background: transparent;
 }
 
+
+/*
 #search {
 		width:30%;
 }
@@ -70,6 +92,8 @@ button {
 	margin-left:5px;
   	width:10%;
 }
+
+*/
 
 #breadcrumbs-area {
     margin: 10px;
