--- a/mainstyles.css
+++ b/mainstyles.css
@@ -23,10 +23,15 @@ body {
   background-image: url("images/thechip.jpg");
   background-size: cover;
   background-position: center;
-
+	padding-bottom: 20px;
+	padding-top: 0px;
+	margin-bottom: 0px;
 }
 
-
+.carousel-inner > .item > a > img, .carousel-inner > .item > img, .img-responsive, .thumbnail a > img, .thumbnail > img {
+	max-width:70%;
+	padding-left:30%;
+}
 .postcode {
 		width: 100%;
     text-align: center;
@@ -72,14 +77,15 @@ body {
 
 
 
-/*
+
 
 #pizza-chart-container {
 		text-align: center;
 		width:100%;
+		height:30%;
 }
 
-*/
+
 
 
 #distance-hint {
@@ -106,6 +112,13 @@ button {
 
 */
 
+.breadcrumb {
+    padding: 8px 15px;
+    margin-bottom: 0px;
+    list-style: outside none none;
+    background-color: #F5F5F5;
+    border-radius: 4px;
+}
 
 /*
 #breadcrumbs-area {
