--- a/restaurant_page.css
+++ b/restaurant_page.css
@@ -34,17 +34,41 @@ body>div {
 	background-color: #CCC;
 }
 
-
 .container-fluid {
 	height:100%;
 	display: block;
 }
 
-.description-box {
+#description-box {
+	padding-top: 10%;
+	padding-left: 33%;
+	padding-right: 33%;
+	text-align: center;
+	font-size: 14px;
+	color: #003366;
+	font-weight: bold;
+}
+
+#restaurant-name {
 	padding-top: 10%;
 	padding-left: 33%;
 	padding-right: 33%;
 	text-align: center;
 	font-size: 25px;
+	text-decoration: underline;
+	font-weight: bold;
 }
 
+#price {
+	padding-top: 10%;
+	padding-left: 33%;
+	padding-right: 33%;
+	text-align: center;
+}
+
+#stars {
+	padding-top: 10%;
+	padding-left: 33%;
+	padding-right: 33%;
+	text-align: center;
+}
