fixed small thing

--- a/restaurant_page.css
+++ b/restaurant_page.css
@@ -72,3 +72,9 @@ body>div {
 	padding-right: 33%;
 	text-align: center;
 }
+#tags {
+	padding-top: 10%;
+	padding-left: 33%;
+	padding-right: 33%;
+	text-align: center;
+}
